<resources>
    <string name="app_name">Microblog</string>
    <string name="contentDescription">image</string>

    <!--Login-->
    <string name="hint_login_nome">Nome</string>
    <string name="hint_login_email">E-mail</string>
    <string name="hint_login_password">Senha</string>
    <string name="error_input_name">Informe o seu nome!</string>
    <string name="error_input_login">Informe o seu login de acesso!</string>
    <string name="error_input_password">Informe a sua senha!</string>
    <string name="button_login">Login</string>
    <string name="button_login_register">Cadastrar</string>
    <string name="button_forget_password">Esqueçeu a senha?</string>
    <string name="button_send_password">Enviar</string>
    <string name="button_register_user">Cadastrar</string>
    <string name="button_logout">Logout</string>
    <string name="title_lets_go">Vamos lá?</string>
    <string name="instruction_register">Vou precisar de algunas dados...</string>
    <string name="forgot_password_title">Esqueçeu a senha?</string>
    <string name="forgot_password_instructions">Não tem problema, me informa o seu email!</string>
    <string name="button_add_post">Inserir Post</string>
    <string name="button_update_post">Alterar</string>
    <string name="button_delete_post">Apagar</string>
    <string name="hint_post">Escreva o seu post...</string>
</resources>
